--- a/WeChatMoments/app/src/main/res/layout/activity_scrolling.xml
+++ b/WeChatMoments/app/src/main/res/layout/activity_scrolling.xml
@@ -16,6 +16,7 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_bar_height"
+            android:background="@drawable/img1"
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.WeChatMoments.AppBarOverlay">
 
@@ -30,48 +31,12 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar">
 
-                <ImageView
-                    android:id="@+id/background"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img1"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.9" />
-
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/Theme.WeChatMoments.PopupOverlay" />
-
-                <LinearLayout
-                    android:id="@+id/fab"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:gravity="right"
-                    android:orientation="horizontal"
-                    app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.9">
-
-                    <TextView
-                        android:id="@+id/nick"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="6dp"
-                        android:textColor="@color/black" />
-
-                    <ImageView
-                        android:id="@+id/avatar"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:paddingRight="14dp"
-                        android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
-                </LinearLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
@@ -84,6 +49,32 @@
 
         <include layout="@layout/content_scrolling" />
 
+        <LinearLayout
+            android:id="@+id/fab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:translationY="-12dp"
+            app:layout_anchor="@id/app_bar"
+            app:layout_anchorGravity="bottom|right">
+
+            <TextView
+                android:id="@+id/nick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="6dp"
+                android:textColor="@color/white" />
+
+            <com.yh.wechatmoments.RoundImageView
+                android:id="@+id/avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="14dp"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher" />
+        </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
