--- a/WeChatMoments/app/src/main/res/layout/content_scrolling.xml
+++ b/WeChatMoments/app/src/main/res/layout/content_scrolling.xml
@@ -10,6 +10,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tweetList"
+        tools:listitem="@tools:sample/avatars"
+        tools:itemCount="22"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
