--- a/WeChatMoments/app/src/main/res/values/colors.xml
+++ b/WeChatMoments/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#d3d3d3</color>
+    <color name="light_blue">#666699</color>
 </resources>
