--- a/TodayNews/app/src/main/res/layout/fragment_main.xml
+++ b/TodayNews/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PlaceholderFragment">
+    tools:context=".ui.news.PlaceholderFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
